# SystemProg

./: .gitignore  CMakeLists.txt  KylesFeedback.txt  P1  P1_LangMather.txt  RyansFeedback.txt  main.cpp
Prog1/: P1  P1_LangMather.txt  main.cpp  mytemp.txt
Prog2/: Params.cpp  Params.hpp  all_tests.txt  main.cpp  sweeper
Prog3/: Direntry.cpp  Direntry.h  FileID.cpp  FileID.h  Stats.cpp  Stats.h  Sweeper.cpp  Sweeper.h  main.cpp  sweeper  test_output.txt  tools.c  tools.h
Prog3/testdir/: file2.txt
Prog4/: p4output.txt
Prog4/code/: Direntry.cpp  FileID.cpp  main.cpp  sweeper  tools.c
Prog5/: FileID.h  Kid.cpp  Kid.h  Model.h  Mom.cpp  Params.cpp  Sweeper.cpp  Sweeper.h  main.cpp  musical  sweeper  test.txt  tests.txt  tools.c
Prog6/: Kid.cpp  Kid.h  Model.h  musical  test.txt
Prog7/: kid  kid.cpp  kidLogic.cpp  kidLogic.hpp  kids.txt  mom  mom.cpp  momLogic.cpp  momLogic.hpp  momOutputLarge.txt  protocol.hpp  socktypes.h
